# R5-Flowlight-V2

./: .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION.md  MUDANCAS_IMPLEMENTADAS.md  README.md  README.md.new  cspell.json  index.html  overlay.html  package-lock.json  package.json  search.html  tailwind.config.js  test-build.sh  test-full-integration.sh  test-integration  test-integration.rs  tsconfig.json  tsconfig.web.json  update_readme.py  vite.config.ts
.github/: BRANCH_PROTECTION.md  CODEOWNERS  branch-protection.yml
.github/workflows/: ci.yml
.husky/: pre-push
LOGS PARA IA/: Guia_global_shortcuts.md  Guia_ícones_cross_plattaform.md
apps/config-tool/: Cargo.toml
apps/config-tool/src/: main.rs
apps/main-app/: Cargo.toml  index.html  tauri.conf.json
apps/main-app/src/: main.rs
apps/search-daemon/: Cargo.toml  tauri.conf.json
apps/search-daemon/src/: daemon.rs  handlers.rs  main.rs  real_daemon.rs  simple_daemon.rs  state.rs
apps/search-overlay/: Cargo.toml  tauri.conf.json
apps/search-overlay/icons/: icon.icns
apps/search-overlay/src/: lib.rs  main.rs  real_overlay.rs  simple_overlay.rs
docs/: ARCHITECTURE.md
libs/ipc-communication/: Cargo.toml
libs/ipc-communication/src/: channel.rs  client.rs  lib.rs  real_simple.rs  server.rs  simple.rs  tcp_ipc.rs
libs/modules/: Cargo.toml
libs/modules/src/: base.rs  daily.rs  lib.rs  registry.rs  traits.rs
libs/search-engine/: Cargo.toml
libs/search-engine/src/: lib.rs
libs/shared-core/: Cargo.toml
libs/shared-core/src/: config.rs  lib.rs  types.rs  utils.rs
platform/macos/: Cargo.toml
platform/macos/src/: lib.rs
platform/windows/: Cargo.toml
platform/windows/src/: lib.rs
scripts/: README.md  generate-hash.ts  generate-sounds.ts  setup-branch-protection.sh  setup-dev-environment.sh  setup_branch_protection.sh
src/: App.tsx  env.d.ts  index.css  overlay.tsx  search.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/crates/auth/: Cargo.toml
src-tauri/crates/auth/src/: errors.rs  handlers.rs  lib.rs  middleware.rs  models.rs  rate_limit.rs  routes.rs
src-tauri/crates/auth/tests/: auth_test.rs
src-tauri/src/: auth_server.rs  lib.rs  main.rs
src-tauri/src/ai/: context_manager.rs  mod.rs  prompt_templates.rs
src-tauri/src/ai/providers/: mod.rs
src-tauri/src/api/: ai.rs  mod.rs  modules.rs  search.rs
src-tauri/src/commands/: auth.rs  icons.rs  mod.rs  window.rs
src-tauri/src/commands/settings/: commands.rs  mod.rs
src-tauri/src/core/: app_indexer.rs  file_indexer.rs  hotkey_manager.rs  mod.rs  search_engine.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/creator/: mod.rs
src-tauri/src/modules/daily/: mod.rs
src-tauri/src/modules/finance/: mod.rs
src-tauri/src/modules/health/: mod.rs
src-tauri/src/modules/nutrition/: mod.rs
src-tauri/src/utils/: config.rs  config_ext.rs  crypto.rs  logger.rs  mod.rs  supabase_client.rs
src/components/: ErrorBoundary.tsx  FileIcon.tsx  TestComponent.tsx
src/components/Auth/: EmailStep.tsx  Login.tsx  NameStep.tsx  NewSignUpFlow.tsx  PasswordStep.tsx  ProgressDots.tsx  SignUpFlow.tsx  SuccessStep.tsx  index.ts
src/components/Auth/SignUp/: SignUpFlow.tsx  index.ts  useSignUpForm.ts
src/components/Common/: CustomToast.tsx  Header.tsx  Sidebar.tsx  StatusFooter.tsx  Tooltip.tsx
src/components/Examples/: NotificationExample.tsx
src/components/Settings/: SettingsWindow.tsx
src/components/Settings/components/: AISettings.tsx  AboutSettings.tsx  AdvancedIndexingSettings.tsx  AppearanceSettings.tsx  ContentTypeSettings.tsx  FolderIconsSettings.tsx  FormatExample.tsx  GeneralSettings.tsx  HotkeySettings.tsx  IntegrationSettings.tsx  NotificationSettings.tsx  PerformanceSettings.tsx  PrivacySettings.tsx  SearchSettings.tsx  index.ts
src/components/Windows/: MainWindow.tsx  OverlaySearchWindow.tsx  SearchWindow.tsx
src/config/: api.ts  toastConfig.ts
src/contexts/: AuthContext.tsx  SettingsContext.tsx
src/hooks/: useFileIcon.ts  useFileIcons.ts  useFormatters.ts  useGlobalShortcut.ts  useNotification.ts
src/types/: content.ts  icons.ts  images.d.ts  settings.ts
test-runner/: Cargo.toml
test-runner/src/: test_daemon.rs  test_ipc.rs  test_overlay.rs
