# R5 Flowlight - Workspace Root
[workspace]
resolver = "2"

members = [
    "src-tauri",
    "apps/main-app",
    "apps/search-daemon", 
    "apps/search-overlay",
    "apps/config-tool",
    "libs/shared-core",
    "libs/ipc-communication",
    "libs/search-engine",
    "libs/modules",
    "platform/macos",
    "platform/windows",
    "test-runner"
]

# Dependências compartilhadas
[workspace.dependencies]
# Dependências gerais
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# Dependências do Tauri
tauri = { version = "2.0.0-rc.15", features = ["macos-private-api", "devtools"] }
tauri-build = { version = "2.0.0-rc.15", features = [] }
tauri-plugin-global-shortcut = "2.0.0-rc.5"
tauri-plugin-shell = "2.0.0-rc.5"

# Dependências específicas de plataforma devem ser declaradas em cada crate que as utiliza