[package]
name = "r5-flowlight"
version = "1.0.0"
description = "R5 Flowlight - Backend Rust"
authors = ["R5 Hub"]
license = "MIT"
repository = "https://github.com/r5hub/flowlight"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "time"] }
log = "0.4"
env_logger = "0.11"

# Core functionality dependencies
tantivy = "0.22"
notify = "8.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"

# File system and OS integration
dirs = "5.0"
walkdir = "2.0"
regex = "1.0"

# JSON and configuration
config = "0.14"
toml = "0.8"

# Authentication
auth = { version = "0.1.0", path = "crates/auth" }
jsonwebtoken = "9.2"
bcrypt = "0.15"
rand = "0.8"

# API framework
warp = "0.3"
lazy_static = "1.4.0"
futures = "0.3"

# Async runtime
tokio-util = { version = "0.7", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
