# src-tauri/Cargo.toml - USANDO VERSÕES ESTÁVEIS

[package]
name = "r5-flowlight"
version = "1.1.0"
description = "R5 Flowlight - Backend Rust"
authors = ["R5 Hub"]
license = "MIT"
repository = "https://github.com/r5hub/flowlight"
edition = "2021"
rust-version = "1.70"
default-run = "r5-flowlight"

[build-dependencies]
# Uma RC estável para build
tauri-build = { version = "2.0.0-rc.15", features = [] }

[dependencies]
# --- TAURI CORE E PLUGINS ---
tauri = { version = "2.0.0-rc.15", features = [ "macos-private-api", "devtools", "tray-icon" ] }
tauri-plugin-http = "2.0.0-rc.6"
tauri-plugin-shell = "2.0.0-rc.5"
tauri-plugin-notification = "2.0.0-rc.5"
tauri-plugin-os = "2.0.0-rc.5"
tauri-plugin-fs = "2.0.0-rc.5"
tauri-plugin-dialog = "2.0.0-rc.5"
tauri-plugin-global-shortcut = "2.0.0-rc.5"
tauri-plugin-process = "2.0.0-rc.3"
tauri-plugin-clipboard-manager = "2.0.0-rc.5"
tauri-plugin-autostart = "2.0.0-rc.5"

# --- FRAMEWORK ASSÍNCRONO ---
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
futures = "0.3"

# --- SERIALIZAÇÃO E DADOS ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# --- WEB & API ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
warp = "0.3"

# --- BANCO DE DADOS E BUSCA ---
tantivy = "0.22"
postgrest = "1.6.0"

# --- LOGGING E CONFIGURAÇÃO ---
log = "0.4"
pretty_env_logger = "0.5"
env_logger = "0.11"
config = "0.14"
toml = "0.8"
dotenvy = "0.15"

# --- UTILITÁRIOS E INTEGRAÇÃO OS ---
lazy_static = "1.4.0"
once_cell = "1.19"
notify = "6.1.1"
directories = "5.0.1"
dirs = "5.0"
walkdir = "2.5.0"
regex = "1.10.5"
tempfile = "3.10.1"
winreg = { version = "0.52.0", features = ["serde"], optional = true }

# --- ÍCONES NATIVOS ---
base64 = "0.21"

# --- AUTENTICAÇÃO ---
jsonwebtoken = "9.3.0"
bcrypt = "0.15"
rand = "0.8"

# --- PLATAFORMA ESPECÍFICA ---
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "check_config_dir"
path = "src/bin/check_config_dir.rs"
