# src-tauri/Cargo.toml - USANDO VERSÕES ESTÁVEIS

[package]
name = "r5-flowlight"
version = "1.1.0"
description = "R5 Flowlight - Backend Rust"
authors = ["R5 Hub"]
license = "MIT"
repository = "https://github.com/r5hub/flowlight"
edition = "2021"
rust-version = "1.70"
default-run = "r5-flowlight"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# --- TAURI CORE E PLUGINS ---
tauri = { workspace = true, features = [ "tray-icon" ] }
tauri-plugin-http = "2.0.0-rc.6"
tauri-plugin-shell = { workspace = true }
tauri-plugin-notification = "2.0.0-rc.5"
tauri-plugin-os = "2.0.0-rc.5"
tauri-plugin-fs = "2.0.0-rc.5"
tauri-plugin-dialog = "2.0.0-rc.5"
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-process = "2.0.0-rc.3"
tauri-plugin-clipboard-manager = "2.0.0-rc.5"
tauri-plugin-autostart = "2.0.0-rc.5"

# --- FRAMEWORK ASSÍNCRONO ---
tokio = { workspace = true }
futures = "0.3"

# --- SERIALIZAÇÃO E DADOS ---
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { workspace = true }

# --- WEB & API ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
warp = "0.3"

# --- BANCO DE DADOS E BUSCA ---
tantivy = "0.22"
postgrest = "1.6.0"

# --- LOGGING E CONFIGURAÇÃO ---
log = { workspace = true }
pretty_env_logger = "0.5"
env_logger = { workspace = true }
config = "0.14"
toml = "0.8"
dotenvy = "0.15"

# --- UTILITÁRIOS E INTEGRAÇÃO OS ---
lazy_static = "1.4.0"
once_cell = "1.19"
notify = "6.1.1"
directories = "5.0.1"
dirs = "5.0"
walkdir = "2.5.0"
regex = "1.10.5"
tempfile = "3.10.1"
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
winreg = "0.52.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "check_config_dir"
path = "src/bin/check_config_dir.rs"
