[package]
name = "config-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# Local dependencies
shared-core = { path = "../../libs/shared-core" }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"