[package]
name = "main-app"
version = "1.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = "2.0.0-rc.5"
tauri-plugin-fs = "2.0.0-rc.5"
tauri-plugin-process = "2.0.0-rc.3"
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

# Local dependencies
ipc-communication = { path = "../../libs/ipc-communication" }