[package]
name = "search-overlay"
version = "0.1.0"
edition = "2021"

# REAL overlay with Tauri UI
[dependencies]
tauri = { workspace = true, features = ["devtools"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# Local dependencies
ipc-communication = { path = "../../libs/ipc-communication" }
shared-core = { path = "../../libs/shared-core" }

# For simple overlay
clap = { version = "4.4", features = ["derive"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio-stream = "0.1"
uuid = { workspace = true }

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
platform-macos = { path = "../../platform/macos" }
objc = { workspace = true }
cocoa = { workspace = true }
core-graphics = "0.25"

[build-dependencies]
tauri-build = { workspace = true }

[[bin]]
name = "simple-overlay"
path = "src/simple_overlay.rs"

[[bin]]
name = "real-overlay"
path = "src/real_overlay.rs"