[package]
name = "modules"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

# Local dependencies
shared-core = { path = "../shared-core" }

# Additional dependencies for modules
regex = "1.10"
fuzzy-matcher = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "processthreadsapi"] }