[package]
name = "auth"
version = "0.1.0"
edition = "2021"
description = "Authentication module for R5 Flowlight"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1.0"
log = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
warp = "0.3"
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
futures = "0.3"
futures-util = "0.3"
validator = { version = "0.16", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
serde_derive = "1.0"
serde_repr = "0.1"

[dev-dependencies]
serial_test = "2.0"
tokio-test = "0.4"
pretty_assertions = "1.0"

[lib]
name = "auth"
path = "src/lib.rs"
